# Inventory_Management_System

./: CMakeLists.txt  README.md  main.cpp
docs/: 6-Report.docx  6-SC.txt  6-Video.txt  Cuốn báo cáo đề án.docx  Giải thích chi tiết.docx  Group6-Video.txt  Phân loại các folder quan trọng.docx  README.md  sơ đồ phân cấp.txt  tree view.md
src/: CMakeLists.txt
src/appController/: CMakeLists.txt  app.cpp  app.h
src/core/: CMakeLists.txt
src/core/app/: CMakeLists.txt  app.cpp  app.h
src/core/commandManager/: CMakeLists.txt  commandmanager.cpp  commandmanager.h
src/core/data/: CMakeLists.txt  data.cpp  data.h
src/core/database/: CMakeLists.txt
src/core/product/: CMakeLists.txt  product.cpp  product.h
src/core/productFactory/: CMakeLists.txt  productFactory.cpp  productFactory.h
src/modules/: CMakeLists.txt
src/modules/command/: CMakeLists.txt  command.h
src/modules/command/types/: CMakeLists.txt  addcommand.cpp  addcommand.h  deletecommand.cpp  deletecommand.h  editcommand.cpp  editcommand.h  exportCommand.cpp  exportCommand.h  importCommand.cpp  importCommand.h
src/modules/invoice/: CMakeLists.txt  invoice.cpp  invoice.h  invoiceService.cpp  invoiceService.h
src/modules/product/: CMakeLists.txt  product.cpp  product.h
src/modules/product/factory/: CMakeLists.txt  productfactory.cpp  productfactory.h
src/modules/product/types/: CMakeLists.txt  electricproduct.cpp  electricproduct.h  otherproduct.cpp  otherproduct.h  waterproduct.cpp  waterproduct.h
src/modules/report/: CMakeLists.txt  report.cpp  report.h
src/modules/user/: CMakeLists.txt
src/ui/: CMakeLists.txt  addproduct.cpp  addproduct.h  addproduct.ui  invoiceDialog.cpp  invoiceDialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  note.txt  productDialog.cpp  productDialog.h  resources.qrc  selectionDialog.cpp  selectionDialog.h
src/utils/: CMakeLists.txt
src/utils/logger/: CMakeLists.txt  log.cpp  log.h
src/utils/notify/: CMakeLists.txt  notify.cpp  notify.h
src/utils/other/: CMakeLists.txt  otherutils.h
